spring_18/ECE_6750/HW2/minimips/mipsLang.output
Terminals which are not used

   COMMA


Grammar

    0 $accept: program $end

    1 program: instructions

    2 instructions: instructions instruction
    3             | instruction

    4 instruction: r_type
    5            | j_type
    6            | i_type
    7            | misc_type
    8            | ID LAB_MARK r_type
    9            | ID LAB_MARK j_type
   10            | ID LAB_MARK i_type
   11            | ID LAB_MARK misc_type

   12 r_type: ADD reg_type reg_type reg_type
   13       | SUB reg_type reg_type reg_type
   14       | AND reg_type reg_type reg_type
   15       | OR reg_type reg_type reg_type
   16       | SLT reg_type reg_type reg_type
   17       | SLL reg_type reg_type INT
   18       | SRL reg_type reg_type INT
   19       | SRA reg_type reg_type INT
   20       | JR reg_type

   21 j_type: JAL INT
   22       | J INT
   23       | JAL ID
   24       | J ID

   25 i_type: LW reg_type INT reg_type
   26       | SW reg_type INT reg_type
   27       | ANDI reg_type reg_type INT
   28       | ADDI reg_type reg_type INT
   29       | ORI reg_type reg_type INT
   30       | SLTI reg_type reg_type INT
   31       | BEQ reg_type reg_type INT
   32       | BNE reg_type reg_type INT
   33       | BEQ reg_type reg_type ID
   34       | BNE reg_type reg_type ID

   35 misc_type: DUMP
   36          | NOP

   37 reg_type: T_REG INT
   38         | V_REG INT
   39         | A_REG INT
   40         | S_REG INT
   41         | GP_REG
   42         | SP_REG
   43         | FP_REG
   44         | RA_REG
   45         | K_REG INT
   46         | AT_REG
   47         | ZERO_REG
   48         | REG_MARK INT


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 12
SUB (259) 13
AND (260) 14
OR (261) 15
SLT (262) 16
SLL (263) 17
SRL (264) 18
SRA (265) 19
ADDI (266) 28
ANDI (267) 27
ORI (268) 29
SLTI (269) 30
BEQ (270) 31 33
BNE (271) 32 34
J (272) 22 24
JR (273) 20
JAL (274) 21 23
LW (275) 25
SW (276) 26
NOP (277) 36
DUMP (278) 35
REG_MARK (279) 48
LAB_MARK (280) 8 9 10 11
COMMA (281)
T_REG (282) 37
V_REG (283) 38
A_REG (284) 39
S_REG (285) 40
GP_REG (286) 41
SP_REG (287) 42
FP_REG (288) 43
RA_REG (289) 44
K_REG (290) 45
AT_REG (291) 46
ZERO_REG (292) 47
INT (293) 17 18 19 21 22 25 26 27 28 29 30 31 32 37 38 39 40 45 48
ID (294) 8 9 10 11 23 24 33 34


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
instructions (42)
    on left: 2 3, on right: 1 2
instruction (43)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
r_type (44)
    on left: 12 13 14 15 16 17 18 19 20, on right: 4 8
j_type (45)
    on left: 21 22 23 24, on right: 5 9
i_type (46)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 6 10
misc_type (47)
    on left: 35 36, on right: 7 11
reg_type (48)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48, on right: 12 13 14
    15 16 17 18 19 20 25 26 27 28 29 30 31 32 33 34


state 0

    0 $accept: . program $end

    ADD   shift, and go to state 1
    SUB   shift, and go to state 2
    AND   shift, and go to state 3
    OR    shift, and go to state 4
    SLT   shift, and go to state 5
    SLL   shift, and go to state 6
    SRL   shift, and go to state 7
    SRA   shift, and go to state 8
    ADDI  shift, and go to state 9
    ANDI  shift, and go to state 10
    ORI   shift, and go to state 11
    SLTI  shift, and go to state 12
    BEQ   shift, and go to state 13
    BNE   shift, and go to state 14
    J     shift, and go to state 15
    JR    shift, and go to state 16
    JAL   shift, and go to state 17
    LW    shift, and go to state 18
    SW    shift, and go to state 19
    NOP   shift, and go to state 20
    DUMP  shift, and go to state 21
    ID    shift, and go to state 22

    program       go to state 23
    instructions  go to state 24
    instruction   go to state 25
    r_type        go to state 26
    j_type        go to state 27
    i_type        go to state 28
    misc_type     go to state 29


state 1

   12 r_type: ADD . reg_type reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 42


state 2

   13 r_type: SUB . reg_type reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 43


state 3

   14 r_type: AND . reg_type reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 44


state 4

   15 r_type: OR . reg_type reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 45


state 5

   16 r_type: SLT . reg_type reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 46


state 6

   17 r_type: SLL . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 47


state 7

   18 r_type: SRL . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 48


state 8

   19 r_type: SRA . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 49


state 9

   28 i_type: ADDI . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 50


state 10

   27 i_type: ANDI . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 51


state 11

   29 i_type: ORI . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 52


state 12

   30 i_type: SLTI . reg_type reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 53


state 13

   31 i_type: BEQ . reg_type reg_type INT
   33       | BEQ . reg_type reg_type ID

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 54


state 14

   32 i_type: BNE . reg_type reg_type INT
   34       | BNE . reg_type reg_type ID

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 55


state 15

   22 j_type: J . INT
   24       | J . ID

    INT  shift, and go to state 56
    ID   shift, and go to state 57


state 16

   20 r_type: JR . reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 58


state 17

   21 j_type: JAL . INT
   23       | JAL . ID

    INT  shift, and go to state 59
    ID   shift, and go to state 60


state 18

   25 i_type: LW . reg_type INT reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 61


state 19

   26 i_type: SW . reg_type INT reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 62


state 20

   36 misc_type: NOP .

    $default  reduce using rule 36 (misc_type)


state 21

   35 misc_type: DUMP .

    $default  reduce using rule 35 (misc_type)


state 22

    8 instruction: ID . LAB_MARK r_type
    9            | ID . LAB_MARK j_type
   10            | ID . LAB_MARK i_type
   11            | ID . LAB_MARK misc_type

    LAB_MARK  shift, and go to state 63


state 23

    0 $accept: program . $end

    $end  shift, and go to state 64


state 24

    1 program: instructions .
    2 instructions: instructions . instruction

    ADD   shift, and go to state 1
    SUB   shift, and go to state 2
    AND   shift, and go to state 3
    OR    shift, and go to state 4
    SLT   shift, and go to state 5
    SLL   shift, and go to state 6
    SRL   shift, and go to state 7
    SRA   shift, and go to state 8
    ADDI  shift, and go to state 9
    ANDI  shift, and go to state 10
    ORI   shift, and go to state 11
    SLTI  shift, and go to state 12
    BEQ   shift, and go to state 13
    BNE   shift, and go to state 14
    J     shift, and go to state 15
    JR    shift, and go to state 16
    JAL   shift, and go to state 17
    LW    shift, and go to state 18
    SW    shift, and go to state 19
    NOP   shift, and go to state 20
    DUMP  shift, and go to state 21
    ID    shift, and go to state 22

    $default  reduce using rule 1 (program)

    instruction  go to state 65
    r_type       go to state 26
    j_type       go to state 27
    i_type       go to state 28
    misc_type    go to state 29


state 25

    3 instructions: instruction .

    $default  reduce using rule 3 (instructions)


state 26

    4 instruction: r_type .

    $default  reduce using rule 4 (instruction)


state 27

    5 instruction: j_type .

    $default  reduce using rule 5 (instruction)


state 28

    6 instruction: i_type .

    $default  reduce using rule 6 (instruction)


state 29

    7 instruction: misc_type .

    $default  reduce using rule 7 (instruction)


state 30

   48 reg_type: REG_MARK . INT

    INT  shift, and go to state 66


state 31

   37 reg_type: T_REG . INT

    INT  shift, and go to state 67


state 32

   38 reg_type: V_REG . INT

    INT  shift, and go to state 68


state 33

   39 reg_type: A_REG . INT

    INT  shift, and go to state 69


state 34

   40 reg_type: S_REG . INT

    INT  shift, and go to state 70


state 35

   41 reg_type: GP_REG .

    $default  reduce using rule 41 (reg_type)


state 36

   42 reg_type: SP_REG .

    $default  reduce using rule 42 (reg_type)


state 37

   43 reg_type: FP_REG .

    $default  reduce using rule 43 (reg_type)


state 38

   44 reg_type: RA_REG .

    $default  reduce using rule 44 (reg_type)


state 39

   45 reg_type: K_REG . INT

    INT  shift, and go to state 71


state 40

   46 reg_type: AT_REG .

    $default  reduce using rule 46 (reg_type)


state 41

   47 reg_type: ZERO_REG .

    $default  reduce using rule 47 (reg_type)


state 42

   12 r_type: ADD reg_type . reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 72


state 43

   13 r_type: SUB reg_type . reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 73


state 44

   14 r_type: AND reg_type . reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 74


state 45

   15 r_type: OR reg_type . reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 75


state 46

   16 r_type: SLT reg_type . reg_type reg_type

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 76


state 47

   17 r_type: SLL reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 77


state 48

   18 r_type: SRL reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 78


state 49

   19 r_type: SRA reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 79


state 50

   28 i_type: ADDI reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 80


state 51

   27 i_type: ANDI reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 81


state 52

   29 i_type: ORI reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 82


state 53

   30 i_type: SLTI reg_type . reg_type INT

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 83


state 54

   31 i_type: BEQ reg_type . reg_type INT
   33       | BEQ reg_type . reg_type ID

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 84


state 55

   32 i_type: BNE reg_type . reg_type INT
   34       | BNE reg_type . reg_type ID

    REG_MARK  shift, and go to state 30
    T_REG     shift, and go to state 31
    V_REG     shift, and go to state 32
    A_REG     shift, and go to state 33
    S_REG     shift, and go to state 34
    GP_REG    shift, and go to state 35
    SP_REG    shift, and go to state 36
    FP_REG    shift, and go to state 37
    RA_REG    shift, and go to state 38
    K_REG     shift, and go to state 39
    AT_REG    shift, and go to state 40
    ZERO_REG  shift, and go to state 41

    reg_type  go to state 85


state 56

   22 j_type: J INT .

    $default  reduce using rule 22 (j_type)


state 57

   24 j_type: J ID .

    $default  reduce using rule 24 (j_type)


state 58

   20 r_type: JR reg_type .

    $default  reduce using rule 20 (r_type)


state 59

   21 j_type: JAL INT .

    $default  reduce using rule 21 (j_type)


state 60

   23 j_type: JAL ID .

    $default  reduce using rule 23 (j_type)


state 61

   25 i_type: LW reg_type . INT reg_type

    INT  shift, and go to state 86


state 62

   26 i_type: SW reg_type . INT reg_type

    INT  shift, and go to state 87


state 63

    8 instruction: ID LAB_MARK . r_type
    9            | ID LAB_MARK . j_type
   10            | ID LAB_MARK . i_type
   11            | ID LAB_MARK . misc_type

    ADD   shift, and go to state 1
    SUB   shift, and go to state 2
    AND   shift, and go to state 3
    OR    shift, and go to state 4
    SLT   shift, and go to state 5
    SLL   shift, and go to state 6
    SRL   shift, and go to state 7
    SRA   shift, and go to state 8
    ADDI  shift, and go to state 9
    ANDI  shift, and go to state 10
    ORI   shift, and go to state 11
    SLTI  shift, and go to state 12
    BEQ   shift, and go to state 13
    BNE   shift, and go to state 14
    J     shift, and go to state 15
    JR    shift, and go to state 16
    JAL   shift, and go to state 17
    LW    shift, and go to state 18
    SW    shift, and go to state 19
    NOP   shift, and go to state 20
    DUMP  shift, and go to state 21

    r_type     go to state 88
    j_type     go to state 89
    i_type     go to state 90
    misc_type  go to state 91

